Fix navbar alignment and add font awesome icons

--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -24,3 +24,7 @@ li[dropdown] {
 .badge-orange {
   background-color: #fa812f;
 }
+
+.navbar-brand:hover {
+  color: #d0e2fa;
+}
