--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~bootstrap/dist/css/bootstrap.css';
+@import '~font-awesome/css/font-awesome.css';
 
 body {
   font-family: Tahoma, sans-serif;
@@ -15,7 +16,7 @@ body {
   font-size: 18px;
 }
 
-.container {
+.content-container {
   padding-top: 100px;
   padding-bottom: 80px;
 }
@@ -72,6 +73,10 @@ button.bg-orange:hover {
 
 .l-s-1 {
   letter-spacing: 1px;
+}
+
+.pt-100 {
+  padding-top: 100px;
 }
 
 @media screen and (max-width: 991px) {
